@@ -1,17 +1,6 @@
 /*
- * (c) Copyright 2025 Palantir Technologies Inc. All rights reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * (c) Copyright 2025 Palantir Technologies Inc.
+ * Licensed under the Apache License, Version 2.0.
  */
 package com.palantir.gradle.versions;
 
@@ -23,7 +12,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.gradle.api.Named;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
@@ -38,214 +26,173 @@ import org.gradle.api.publish.PublishingExtension;
 import org.gradle.api.publish.ivy.IvyPublication;
 import org.gradle.api.publish.maven.MavenPublication;
 
+/**
+ * Gradle plugin to align and publish dependency constraints for Java projects.
+ */
 public class GradleModuleMetadataConstraintsPlugin implements Plugin<Project> {
     private static final Logger log = Logging.getLogger(GradleModuleMetadataConstraintsPlugin.class);
-    private static final String PUBLISH_LOCAL_CONSTRAINTS_PROPERTY =
-            "com.palantir.gradle.versions.publishLocalConstraints";
-    private static final String PUBLISH_PLATFORM_CONSTRAINTS_PROPERTY =
+
+    private static final String PUBLISH_LOCAL_CONSTRAINTS = "com.palantir.gradle.versions.publishLocalConstraints";
+    private static final String PUBLISH_PLATFORM_CONSTRAINTS =
             "com.palantir.gradle.versions.publishPlatformConstraints";
     private static final String CONSTRAINTS_CONFIG = "sameVersionConstraints";
+    private static final String API_CONSTRAINTS_CONFIG = "gcvApiPublishConstraints";
+    private static final String RUNTIME_CONSTRAINTS_CONFIG = "gcvRuntimePublishConstraints";
 
     @Override
     public void apply(Project root) {
-        validateRootProject(root);
+        if (!root.equals(root.getRootProject())) {
+            throw new IllegalStateException("Plugin must be applied to the root project");
+        }
 
         root.getPluginManager().apply(VersionsLockPlugin.class);
 
-        // Setup configurations early for all projects
         root.allprojects(project -> {
-            project.getPluginManager().withPlugin("java", _plugin -> {
-                // Create configurations early during configuration phase
-                Configuration apiConstraintsConfig = createConstraintsConfiguration(
-                        project, "gcvApiPublishConstraints", "Filtered API constraints for publishing");
-                Configuration runtimeConstraintsConfig = createConstraintsConfiguration(
-                        project, "gcvRuntimePublishConstraints", "Filtered runtime constraints for publishing");
-
-                // Extend configurations immediately
-                extendConfiguration(project, JavaPlugin.API_ELEMENTS_CONFIGURATION_NAME, apiConstraintsConfig);
-                extendConfiguration(project, JavaPlugin.RUNTIME_ELEMENTS_CONFIGURATION_NAME, runtimeConstraintsConfig);
+            project.getPluginManager().withPlugin("java", _ignored -> {
+                createConstraintsConfig(project, API_CONSTRAINTS_CONFIG, "API constraints for publishing");
+                createConstraintsConfig(project, RUNTIME_CONSTRAINTS_CONFIG, "Runtime constraints for publishing");
+                extendConfig(project, JavaPlugin.API_ELEMENTS_CONFIGURATION_NAME, API_CONSTRAINTS_CONFIG);
+                extendConfig(project, JavaPlugin.RUNTIME_ELEMENTS_CONFIGURATION_NAME, RUNTIME_CONSTRAINTS_CONFIG);
             });
         });
 
-        // Configure same-version groups after project evaluation
-        root.afterEvaluate(_root -> {
-            if (shouldPublishPlatformConstraints(root)) {
-                configureSameVersionGroups(root);
+        root.afterEvaluate(_ignored -> {
+            if ("true".equals(root.findProperty(PUBLISH_PLATFORM_CONSTRAINTS))) {
+                addSameVersionConstraints(root);
             }
-
-            // Configure publishable constraints for all projects
-            configurePublishableConstraints(root);
+            addPublishableConstraints(root);
         });
     }
 
-    private void validateRootProject(Project root) {
-        if (!root.equals(root.getRootProject())) {
-            throw new IllegalStateException("same-version-constraints must be applied to the root project");
-        }
-    }
-
-    private void configureSameVersionGroups(Project root) {
+    /**
+     * For groups with multiple Java projects, add constraints to keep their versions aligned.
+     */
+    private void addSameVersionConstraints(Project root) {
         Map<String, Set<Project>> projectsByGroup = root.getAllprojects().stream()
                 .filter(this::isJavaLibrary)
                 .collect(Collectors.groupingBy(p -> String.valueOf(p.getGroup()), Collectors.toSet()));
 
-        projectsByGroup.entrySet().stream()
-                .filter(entry -> entry.getValue().size() > 1)
-                .forEach(this::configureGroup);
+        projectsByGroup.values().stream().filter(group -> group.size() > 1).forEach(this::alignGroupVersions);
     }
 
-    private void configureGroup(Map.Entry<String, Set<Project>> entry) {
-        String group = entry.getKey();
-        List<Project> projects = entry.getValue().stream()
-                .sorted(Comparator.comparing(Project::getPath))
-                .toList();
+    private void alignGroupVersions(Set<Project> group) {
+        List<Project> projects =
+                group.stream().sorted(Comparator.comparing(Project::getPath)).toList();
+        String groupId = projects.get(0).getGroup().toString();
 
         log.lifecycle(
-                "same-version-constraints: configuring group '{}' for {} modules: {}",
-                group,
-                projects.size(),
-                projects.stream().map(Project::getName).toList());
+                "Aligning group '{}' for modules: {}",
+                groupId,
+                projects.stream().map(Project::getName).collect(Collectors.toList()));
 
-        projects.forEach(project -> configureSameVersionConstraints(project, projects));
-    }
+        projects.forEach(project -> {
+            Configuration constraints =
+                    createConstraintsConfig(project, CONSTRAINTS_CONFIG, "Align sibling modules to same version");
 
-    private void configureSameVersionConstraints(Project project, List<Project> siblings) {
-        Configuration constraints = project.getConfigurations().maybeCreate(CONSTRAINTS_CONFIG);
-        constraints.setDescription("Same-version constraints for modules in the same group");
-        constraints.setCanBeResolved(false);
-        constraints.setCanBeConsumed(false);
-        constraints.setVisible(false);
+            projects.stream().filter(sibling -> !sibling.equals(project)).forEach(sibling -> {
+                String gav = sibling.getGroup() + ":" + sibling.getName();
+                constraints
+                        .getDependencyConstraints()
+                        .add(project.getDependencies().getConstraints().create(gav, c -> {
+                            c.version(v -> v.require("[" + sibling.getVersion() + ",)"));
+                            c.because("Align modules from same group");
+                        }));
+            });
 
-        siblings.stream()
-                .filter(sibling -> !sibling.equals(project))
-                .map(sibling -> createConstraint(project, sibling))
-                .forEach(constraints.getDependencyConstraints()::add);
-
-        // Only apply to existing configurations if Java plugin is present
-        if (project.getPluginManager().hasPlugin("java")) {
-            extendConfiguration(project, JavaPlugin.API_ELEMENTS_CONFIGURATION_NAME, constraints);
-            extendConfiguration(project, JavaPlugin.RUNTIME_ELEMENTS_CONFIGURATION_NAME, constraints);
-        }
-    }
-
-    private void configurePublishableConstraints(Project rootProject) {
-        List<DependencyConstraint> lockDeps = constructPublishableConstraintsFromLockFile(rootProject);
-
-        rootProject.getAllprojects().forEach(project -> {
-            // Only process Java projects
-            if (!project.getPluginManager().hasPlugin("java")) {
-                return;
+            if (project.getPluginManager().hasPlugin("java")) {
+                extendConfig(project, JavaPlugin.API_ELEMENTS_CONFIGURATION_NAME, constraints.getName());
+                extendConfig(project, JavaPlugin.RUNTIME_ELEMENTS_CONFIGURATION_NAME, constraints.getName());
             }
-
-            List<DependencyConstraint> constraints = createLocalProjectConstraints(project);
-
-            ImmutableList<DependencyConstraint> publishableConstraintsForSubproject =
-                    ImmutableList.<DependencyConstraint>builder()
-                            .addAll(constraints)
-                            .addAll(lockDeps)
-                            .build();
-
-            if (publishableConstraintsForSubproject.isEmpty()) {
-                return;
-            }
-
-            // Populate the pre-created configurations with filtered constraints
-            populateConstraintConfigurations(project, constraints, lockDeps);
         });
     }
 
-    private void populateConstraintConfigurations(
-            Project project, List<DependencyConstraint> local, List<DependencyConstraint> lock) {
-        // Get the modules from compile and runtime classpaths
-        Set<ModuleIdentifier> compileModules = project
-                .getConfigurations()
-                .getByName(JavaPlugin.COMPILE_CLASSPATH_CONFIGURATION_NAME)
-                .getIncoming()
-                .getResolutionResult()
-                .getAllComponents()
-                .stream()
-                .map(ResolvedComponentResult::getModuleVersion)
-                .filter(Objects::nonNull)
-                .map(ModuleVersionIdentifier::getModule)
-                .collect(Collectors.toSet());
-
-        Set<ModuleIdentifier> runtimeModules = project
-                .getConfigurations()
-                .getByName(JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME)
-                .getIncoming()
-                .getResolutionResult()
-                .getAllComponents()
-                .stream()
-                .map(ResolvedComponentResult::getModuleVersion)
-                .filter(Objects::nonNull)
-                .map(ModuleVersionIdentifier::getModule)
-                .collect(Collectors.toSet());
-
-        // Filter constraints
-        List<DependencyConstraint> filteredApiLockConstraints = lock.stream()
-                .filter(constraint -> compileModules.contains(constraint.getModule()))
-                .toList();
-
-        List<DependencyConstraint> filteredRuntimeLockConstraints = lock.stream()
-                .filter(constraint -> runtimeModules.contains(constraint.getModule()))
-                .toList();
-
-        // Add to the pre-created configurations
-        Configuration apiConstraintsConfig = project.getConfigurations().getByName("gcvApiPublishConstraints");
-        apiConstraintsConfig.getDependencyConstraints().addAll(filteredApiLockConstraints);
-        apiConstraintsConfig.getDependencyConstraints().addAll(local);
-
-        Configuration runtimeConstraintsConfig = project.getConfigurations().getByName("gcvRuntimePublishConstraints");
-        runtimeConstraintsConfig.getDependencyConstraints().addAll(filteredRuntimeLockConstraints);
-        runtimeConstraintsConfig.getDependencyConstraints().addAll(local);
-    }
-
-    private List<DependencyConstraint> createLocalProjectConstraints(Project currentProject) {
-        if (!shouldPublishLocalConstraints(currentProject.getRootProject())) {
-            return ImmutableList.of();
-        }
-
-        String reason = "Library published from the same project: "
-                + currentProject.getRootProject().getName();
-
-        return currentProject.getRootProject().getAllprojects().stream()
-                .filter(project -> !currentProject.equals(project))
-                .filter(this::isJavaLibrary)
-                .map(library -> currentProject
-                        .getDependencies()
-                        .getConstraints()
-                        .create(library, constraint -> constraint.because(reason)))
-                .toList();
-    }
-
-    private static List<DependencyConstraint> constructPublishableConstraintsFromLockFile(Project rootProject) {
+    /**
+     * Adds dependency constraints for publishing, from lock file and optionally local projects.
+     */
+    private void addPublishableConstraints(Project root) {
         LockState lockState =
-                new ConflictSafeLockFile(rootProject.file("versions.lock").toPath()).readLocks();
-        // We only publish the production locks.
-        return lockState.productionLinesByModuleIdentifier().entrySet().stream()
-                .map(e -> e.getKey() + ":" + e.getValue().version())
-                .map(notation -> rootProject.getDependencies().getConstraints().create(notation, constraint -> {
-                    constraint.version(v -> {
-                        String version = Objects.requireNonNull(constraint.getVersion());
-                        v.require(version);
-                    });
-                    constraint.because("Computed from com.palantir.consistent-versions' versions.lock in "
-                            + rootProject.getName());
+                new ConflictSafeLockFile(root.file("versions.lock").toPath()).readLocks();
+        List<DependencyConstraint> lockConstraints = lockState.productionLinesByModuleIdentifier().entrySet().stream()
+                .map(e -> root.getDependencies()
+                        .getConstraints()
+                        .create(e.getKey() + ":" + e.getValue().version(), c -> {
+                            c.version(v -> v.require(Objects.requireNonNull(c.getVersion())));
+                            c.because("From versions.lock in " + root.getName());
+                        }))
+                .toList();
+
+        root.getAllprojects().stream()
+                .filter(p -> p.getPluginManager().hasPlugin("java"))
+                .forEach(project -> {
+                    List<DependencyConstraint> localConstraints = ImmutableList.of();
+                    if ("true".equals(root.findProperty(PUBLISH_LOCAL_CONSTRAINTS))) {
+                        localConstraints = getLocalConstraints(root, project);
+                    }
+
+                    if (localConstraints.isEmpty() && lockConstraints.isEmpty()) {
+                        return;
+                    }
+
+                    Set<ModuleIdentifier> compileModules =
+                            getModules(project, JavaPlugin.COMPILE_CLASSPATH_CONFIGURATION_NAME);
+                    Set<ModuleIdentifier> runtimeModules =
+                            getModules(project, JavaPlugin.RUNTIME_CLASSPATH_CONFIGURATION_NAME);
+
+                    Configuration apiConfig = project.getConfigurations().getByName(API_CONSTRAINTS_CONFIG);
+                    addConstraintsToConfig(apiConfig, compileModules, lockConstraints, localConstraints);
+
+                    Configuration runtimeConfig = project.getConfigurations().getByName(RUNTIME_CONSTRAINTS_CONFIG);
+                    addConstraintsToConfig(runtimeConfig, runtimeModules, lockConstraints, localConstraints);
+                });
+    }
+
+    private void addConstraintsToConfig(
+            Configuration config,
+            Set<ModuleIdentifier> allowedModules,
+            List<DependencyConstraint> lockConstraints,
+            List<DependencyConstraint> localConstraints) {
+        lockConstraints.stream()
+                .filter(c -> allowedModules.contains(c.getModule()))
+                .forEach(c -> {
+                    config.getDependencyConstraints().add(c);
+                });
+        localConstraints.forEach(c -> {
+            config.getDependencyConstraints().add(c);
+        });
+    }
+
+    private List<DependencyConstraint> getLocalConstraints(Project root, Project project) {
+        String reason = "Library published from same project: " + root.getName();
+        return root.getAllprojects().stream()
+                .filter(lib -> !project.equals(lib))
+                .filter(this::isJavaLibrary)
+                .map(lib -> project.getDependencies().getConstraints().create(lib, c -> {
+                    c.because(reason);
                 }))
                 .collect(Collectors.toList());
     }
 
-    private DependencyConstraint createConstraint(Project project, Project sibling) {
-        String gavNoVersion = sibling.getGroup() + ":" + sibling.getName();
-        String version = String.valueOf(sibling.getVersion());
-
-        return project.getDependencies().getConstraints().create(gavNoVersion, constraint -> {
-            constraint.version(v -> v.require("[" + version + ",)"));
-            constraint.because("Align modules from the same repository to the same version");
-        });
+    /**
+     * Utility: Get all modules present in a configuration's resolved classpath.
+     */
+    private Set<ModuleIdentifier> getModules(Project project, String configName) {
+        return project
+                .getConfigurations()
+                .getByName(configName)
+                .getIncoming()
+                .getResolutionResult()
+                .getAllComponents()
+                .stream()
+                .map(ResolvedComponentResult::getModuleVersion)
+                .filter(Objects::nonNull)
+                .map(ModuleVersionIdentifier::getModule)
+                .collect(Collectors.toSet());
     }
 
-    private Configuration createConstraintsConfiguration(Project project, String name, String description) {
+    /**
+     * Utility: Create a configuration for dependency constraints.
+     */
+    private Configuration createConstraintsConfig(Project project, String name, String description) {
         Configuration config = project.getConfigurations().maybeCreate(name);
         config.setDescription(description);
         config.setCanBeResolved(false);
@@ -254,20 +201,18 @@ public class GradleModuleMetadataConstraintsPlugin implements Plugin<Project> {
         return config;
     }
 
-    private void extendConfiguration(Project project, String configName, Configuration constraints) {
-        project.getConfigurations().named(configName).configure(conf -> conf.extendsFrom(constraints));
+    /**
+     * Utility: Extend a configuration with another.
+     */
+    private void extendConfig(Project project, String baseConfig, String constraintsConfig) {
+        project.getConfigurations().named(baseConfig).configure(conf -> {
+            conf.extendsFrom(project.getConfigurations().getByName(constraintsConfig));
+        });
     }
 
-    private boolean shouldPublishLocalConstraints(Project project) {
-        return project.hasProperty(PUBLISH_LOCAL_CONSTRAINTS_PROPERTY)
-                && "true".equals(project.findProperty(PUBLISH_LOCAL_CONSTRAINTS_PROPERTY));
-    }
-
-    private boolean shouldPublishPlatformConstraints(Project project) {
-        return project.hasProperty(PUBLISH_PLATFORM_CONSTRAINTS_PROPERTY)
-                && "true".equals(project.findProperty(PUBLISH_PLATFORM_CONSTRAINTS_PROPERTY));
-    }
-
+    /**
+     * Determines if the project is a Java library (publishes a JAR).
+     */
     private boolean isJavaLibrary(Project project) {
         // Nebula creates publications lazily, so we check for it explicitly
         if (project.getPluginManager().hasPlugin("nebula.maven-publish")) {
@@ -281,20 +226,12 @@ public class GradleModuleMetadataConstraintsPlugin implements Plugin<Project> {
             return false;
         }
 
-        List<String> jarPublications = publishing.getPublications().stream()
-                .filter(this::hasJarArtifact)
-                .map(Named::getName)
-                .collect(ImmutableList.toImmutableList());
-
-        if (jarPublications.isEmpty()) {
-            log.debug("Project '{}' is not a library (no jar publications)", project.getDisplayName());
-            return false;
-        }
-
-        log.debug("Project '{}' is a library (publishes jars: {})", project.getDisplayName(), jarPublications);
-        return true;
+        return publishing.getPublications().stream().anyMatch(this::hasJarArtifact);
     }
 
+    /**
+     * Determines if a publication (Maven or Ivy) includes a JAR artifact.
+     */
     private boolean hasJarArtifact(Object publication) {
         if (publication instanceof MavenPublication maven) {
             return maven.getArtifacts().stream().anyMatch(a -> "jar".equals(a.getExtension()));
